--- a/FieldsToFuture/package.json
+++ b/FieldsToFuture/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^17.3.3",
     "express": "^4.18.2",
     "fields-to-future": "file:",
+    "primeflex": "^3.3.1",
+    "primeng": "^17.18.15",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
